--- a/course_management_module/admin/add_course.css
+++ b/course_management_module/admin/add_course.css
@@ -4,7 +4,7 @@
 }
 
 Body{
-    background-color: #54fd54;
+    background-color: #7ccc20;
 }
 .container{
     margin: 2cm 3cm;
@@ -21,7 +21,7 @@ Body{
     display: flex;
     position: absolute;
     padding: 10px;
-    height: 50%;
+    height: 53%;
     width: 20%;
     color: black;
     font-size: 2.0 rem;
@@ -30,7 +30,7 @@ Body{
     line-height: 1cm;
 }
 .hero1{
-    background-color: antiquewhite;
+    background-color: rgb(228, 131, 5);
     border: 2px solid black;
     margin-left: 42%;
     margin-top: 0.4cm;
@@ -47,7 +47,7 @@ Body{
 }
 
 .hero2{
-    background-color: antiquewhite;
+    background-color: rgb(115, 208, 231);
     border: 2px solid black;
     margin-left: 66%;
     margin-top: 0.4cm;
@@ -69,5 +69,5 @@ Body{
     border-radius: 6px;
     border: 2px solid rgb(19, 8, 8);
     margin-left: 38%;
-    margin-top: 35px;
+    margin-top: 30px;
 }
